# CLIC

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: base_config.yaml
scripts/: compare_linear_baseline.py  plot_circuit_residuals.py  plot_circuit_summary.py  prepare_pv_data.py  train.py
src/: __init__.py
src/circuits/: __init__.py  ablation.py  ood_score.py
src/losses/: __init__.py  flow_nll.py  hsic.py  reconstruction.py
src/models/: __init__.py  clic.py  decoder.py  encoder.py  flow.py
src/training/: logger.py  trainer.py
src/utils/: __init__.py  config.py  seed.py
tests/: __init__.py  test_circuits.py  test_losses.py  test_models.py
